SONARPY-1600 Fix FP on S5655: boolean parameter incompatible with float type annotation.